# matrix-multiplication

./: README.md  cublas-mm.cpp  install_dep.sh  matmuls.py  setup.py  setup.sh
benchmarks/: cublas_fc_layer.py  cusparse_fc_layer.py  fc_layer_matmuls.py  mnist_benchmark.py  pytorch_linear.py  random_tensor_benchmark.py  raw_matmuls.py
cublas_mm/: CMakeLists.txt  Utilities.cuh  clean.sh  cublas_mm.cpp  cublas_mm_kernel.cu  cublas_mm_kernel.h  cusparse_mm_kernel.cu  cusparse_mm_kernel.h  cusparse_test.py  custom_mm.cpp  custom_mm_kernel.h  setup.py  test.py
matmuls/: matmuls.py
src/: Utilities.cuh  baseline_mm.cu  cublas_bmm_kernel.cu  cublas_bmm_kernel.h  cublas_kernels.cu  cublas_mm_kernel.cu  cublas_mm_kernel.h  cusparse_mm_kernel.h  custom_mm.cpp  custom_mm.cu  custom_mm_kernel.h  debug.txt  default_mm.cu  dump.nvvp  dump2.nvvp  dump3.nvvp  mm_kernels.cu  naive_reducer.cuh  naive_sparse_mm.cu  report1.qdrep  report10.qdrep  report11.qdrep  report12.qdrep  report13.qdrep  report2.qdrep  report3.qdrep  report4.qdrep  report5.qdrep  report6.qdrep  report7.qdrep  report8.qdrep  report9.qdrep  setup.py  sparse_mm.cu
src/custom_mm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_op/: CMakeLists.txt  cublas_fc_layer.py  cusparse_fc_layer.py  fc_layer.py  main.cpp  matmuls.py  test_layer.py
tests/: cublas_fc_layer.py  cublas_kernel_test.py  cusparse_fc_layer.py  cusparse_kernel_test.py  matmuls.py  naive_kernel_test.py  pytorch_linear.py  regular_fc_layer.py  test_layer.py  tiledsppm_kernel_test.py
utils/: matmuls.py
